<resources>
    <string name="app_name">TicketToRide</string>
    <string name="username_label">User Name: </string>
    <string name="username_hint">Enter a username.</string>
    <string name="password_label">Password: </string>
    <string name="password_hint">Enter a password.</string>
    <string name="sign_in_label">Login</string>
    <string name="register_label">Register</string>
    <string name="player_select">Select the number of players</string>
    <string name="two_label">2</string>
    <string name="three_label">3</string>
    <string name="four_label">4</string>
    <string name="five_label">5</string>
    <string name="player_label">Username: %1$s</string>
    <string name="train_card_label">Train Cards: %1$d</string>
    <string name="destination_card_label">Destination Cards: %1$d</string>
    <string name="cars_label">Train Cars Left: %1$d</string>
    <string name="turn_label">Player Turn: %1$d</string>
    <string name="points_label">Points: %1$d</string>
    <string name="game_option">Click a game to join or create a game</string>
    <string name="return_map">Return To Map</string>
    <string name="join_game">Join Game</string>
    <string name="rejoin_game">Rejoin Game</string>
    <string name="login_welcome">WELCOME TO TICKET TO RIDE</string>
    <string name="game_list_item">Game Name</string>
    <string name="game_group">Group Name</string>
    <string name="group_hint">Enter a group name</string>
    <string name="create_game">Create Game</string>
    <string name="start_game">Start Game</string>
    <string name="group_name">Group Name: </string>
    <string name="game_id">Game ID: </string>
    <string name="num_players">Number of Players: </string>
    <string name="game_room">Have fun...</string>
    <string name="login_error">Username or password is incorrect</string>
    <string name="register_error">Username is already taken</string>
    <string name="game_welcome">Welcome to the game...</string>
    <string name="start_game_error">Need more than 1 player</string>
    <string name="join_game_error">Game has max number of players</string>
    <string name="create_game_error">Invalid values for creating game</string>
    <string name="game_start_message">Party time, the game is starting now!</string>
    <string name="chat_section">Chat</string>
    <string name="chat_hint">Enter chat message</string>
    <string name="draw_train">Draw Train Cards</string>
    <string name="draw_dest">Draw Dest Cards</string>
    <string name="claim_route">Claim Route</string>
    <string name="view_cards">View Cards</string>
    <string name="train_deck">Trains: %1$d</string>
    <string name="dest_deck">Dests: %1$d</string>
    <string name="player_username">Player: </string>
    <string name="points">Points: </string>
    <string name="player_hand">Current Hand</string>
    <string name="blue_cards">Blue: #</string>
    <string name="green_cards">Green: #</string>
    <string name="red_cards">Red: #</string>
    <string name="orange_cards">Orange: #</string>
    <string name="pink_cards">Pink: #</string>
    <string name="white_cards">White: #</string>
    <string name="black_cards">Black: #</string>
    <string name="yellow_cards">Yellow: #</string>
    <string name="locomotive_cards">Locomotive: #</string>
    <string name="player_dest">Current Destination Cards</string>
    <string name="start_city">Start: </string>
    <string name="end_city">Destination: </string>
    <string name="dest_points">Points: </string>
    <string name="cancel_select">Cancel</string>
    <string name="setup_game_error">Could not setup the game</string>
    <string name="return_to_game">Return to Game</string>
    <string name="player_info">Player Information</string>
    <string name="dest_draw_hint">Please select %1$d Destination cards to keep.</string>
    <string name="final_choice">Finished</string>
    <string name="destination_card_to">to</string>
    <string name="first_city">First City: </string>
    <string name="second_city">Second City: </string>
    <string name="claim_hint">Click a clientRoute you want to claim</string>
    <string name="vancouver_name">Vancouver</string>
    <string name="calgary_name">Calgary</string>
    <string name="winnipeg_name">Winnipeg</string>
    <string name="saul_st_marie_name">Saul St. Marie</string>
    <string name="montreal_name">Montreal</string>
    <string name="seattle_name">Seattle</string>
    <string name="helena_name">Helena</string>
    <string name="duluth_name">Duluth</string>
    <string name="toronto_name">Toronto</string>
    <string name="boston_name">Boston</string>
    <string name="portland_name">Portland</string>
    <string name="salt_lake_city_name">Salt Lake City</string>
    <string name="san_francisco_name">San Francisco</string>
    <string name="los_angeles_name">Los Angeles</string>
    <string name="phoenix_name">Phoenix</string>
    <string name="las_vegas_name">Las Vegas</string>
    <string name="santa_fe_name">Santa Fe</string>
    <string name="el_paso_name">El Paso</string>
    <string name="dallas_name">Dallas</string>
    <string name="houston_name">Houston</string>
    <string name="new_orleans_name">New Orleans</string>
    <string name="miami_name">Miami</string>
    <string name="charleston_name">Charleston</string>
    <string name="atlanta_name">Atlanta</string>
    <string name="little_rock_name">Little Rock</string>
    <string name="oklahoma_city_name">Oklahoma City</string>
    <string name="denver_name">Denver</string>
    <string name="omaha_name">Omaha</string>
    <string name="chicago_name">Chicago</string>
    <string name="pittsburgh_name">Pittsburgh</string>
    <string name="saint_louis_name">St. Louis</string>
    <string name="kansas_city_name">Kansas City</string>
    <string name="nashville_name">Nashville</string>
    <string name="raleigh_name">Raleigh</string>
    <string name="washington_name">Washington D.C.</string>
    <string name="new_york_name">New York City</string>
    <string name="invalid_city_name">Error! Invalid city!</string>
    <string name="wild_card_error">You cannot draw a locomotive on your second draw</string>
    <string name="discard_hint">Click cards to discard</string>
    <string name="discard_number">Discarded: </string>
    <string name="discard">Discard</string>
    <string name="winner">Winner: </string>
    <string name="longest_route">Longest Route Holder: </string>
    <string name="back_to_lobby">Back To Lobby</string>
    <string name="player_score">Player: </string>
    <string name="score_points">Points: </string>
    <string name="lost_points">Lost Points: </string>
    <string name="gained_points">Gained Points: </string>
    <string name="history">History</string>
    <string name="view_map">View Map</string>
    <string name="return_destination">Back</string>
    <string name="game_over_winner_text">Winner: %1$s</string>
    <string name="game_over_longest_route_label">Longest Route: %1$s</string>
    <string name="no_train_cards">Not enough train cards in deck</string>
</resources>
