<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="118dp"
            android:layout_height="47dp"
            android:text="@string/game_group" />
        <EditText
            android:id="@+id/group_name"
            android:layout_width="247dp"
            android:layout_height="47dp"
            android:hint="@string/group_hint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/player_select" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/two_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_label"/>
        <Button
            android:id="@+id/three_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three_label"/>
        <Button
            android:id="@+id/four_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_label"/>
        <Button
            android:id="@+id/five_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/create_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_game" />
    </LinearLayout>
</LinearLayout>