<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/group_name"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/group_name" />
    <TextView
        android:id="@+id/game_id"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/game_id" />
    <TextView
        android:id="@+id/num_player"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/num_players" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"/>
    </LinearLayout>
</LinearLayout>