<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_fragment"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp">
        
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/player_recycler_view">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/chat_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="530dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/game_board"
                android:layout_width="530dp"
                android:layout_height="wrap_content"
                android:src="@drawable/tickettoride" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/draw_train"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/draw_train" />

                <Button
                    android:id="@+id/draw_dest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/draw_dest" />

                <Button
                    android:id="@+id/claim_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/claim_route" />

                <Button
                    android:id="@+id/view_cards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_cards" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

        </LinearLayout>

        <ImageView
            android:id="@+id/first_card"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/black_card" />
        <ImageView
            android:id="@+id/second_card"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/white_card"/>
        <ImageView
            android:id="@+id/third_card"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/blue_card"/>
        <ImageView
            android:id="@+id/fourth_card"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/red_card"/>
        <ImageView
            android:id="@+id/fifth_card"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/locomotive"/>
        <TextView
            android:id="@+id/train_deck"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/deck"
            android:textColor="#000"
            android:text="@string/train_deck"/>
        <TextView
            android:id="@+id/dest_deck"
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@drawable/deck"
            android:textColor="#000"
            android:text="@string/dest_deck"/>
        <Button
            android:layout_width="60dp"
            android:layout_gravity="bottom"
            android:layout_height="wrap_content"
            android:id="@+id/history_button"
            android:text="@string/history"
            android:textSize="12dp"/>




    </LinearLayout>

</LinearLayout>