<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:textSize="20dp"
        android:gravity="center">
    </TextView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/join_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="150dp">
    </android.support.v7.widget.RecyclerView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rejoin_game"
        android:textSize="20dp"
        android:gravity="center">
    </TextView>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rejoin_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="150dp">
    </android.support.v7.widget.RecyclerView>
    <Button
        android:id="@+id/create_game"
        android:layout_gravity="center"
        android:text="@string/create_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/join_progressBar"
            android:progressDrawable="@drawable/circular_progress_bar"/>
</LinearLayout>