<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout">


    <TextView
            android:id="@+id/destination_card_prompt_string"
            tools:text="@string/dest_draw_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <android.support.constraint.ConstraintLayout
            android:id="@+id/destination_card_1"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/destination_card_prompt_string"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/destination_card_2"
            app:layout_constraintBottom_toTopOf="@id/destination_card_done_button"
            android:elevation="10dp"
            android:layout_marginBottom="8dp">

        <TextView
                android:id="@+id/card_1_city_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="City1"
                android:layout_marginTop="16dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/card_1_city_1"
                android:text="@string/destination_card_to"
                android:id="@+id/card_1_to"/>

        <TextView
                android:id="@+id/card_1_city_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                tools:text="City2"
                app:layout_constraintTop_toBottomOf="@+id/card_1_to"/>

        <TextView
                android:id="@+id/card_1_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>

        <ImageView
                android:id="@+id/card_1_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/x_icon"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/destination_card_2"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/destination_card_prompt_string"
            app:layout_constraintStart_toEndOf="@+id/destination_card_1"
            app:layout_constraintEnd_toStartOf="@id/destination_card_3"
            app:layout_constraintBottom_toTopOf="@id/destination_card_done_button"
            android:elevation="10dp"
            android:layout_marginBottom="8dp">
        <TextView
                android:id="@+id/card_2_city_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="City1"
                android:layout_marginTop="16dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/card_2_city_1"
                android:text="@string/destination_card_to"
                android:id="@+id/card_2_to"/>

        <TextView
                android:id="@+id/card_2_city_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                tools:text="City2"
                app:layout_constraintTop_toBottomOf="@+id/card_2_to"/>

        <TextView
                android:id="@+id/card_2_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>

        <ImageView
                android:id="@+id/card_2_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/check_icon"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/destination_card_3"
            android:background="@drawable/card_background"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/destination_card_prompt_string"
            app:layout_constraintStart_toEndOf="@+id/destination_card_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/destination_card_done_button"
            android:elevation="10dp"
            android:layout_marginBottom="8dp">
        <TextView
                android:id="@+id/card_3_city_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="City1"
                android:layout_marginTop="16dp"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/card_3_city_1"
                android:text="@string/destination_card_to"
                android:id="@+id/card_3_to"/>

        <TextView
                android:id="@+id/card_3_city_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                tools:text="City2"
                app:layout_constraintTop_toBottomOf="@+id/card_3_to"/>

        <TextView
                android:id="@+id/card_3_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="10"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"/>

        <ImageView
                android:id="@+id/card_3_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/x_icon"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"/>


    </android.support.constraint.ConstraintLayout>

    <Button
            android:id="@+id/destination_card_done_button"
            android:text="@string/final_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>